# HCL

./: README.md
hcl/src/: CMakeLists.txt  fault_tolerance_inc.h  hccl_api_inc.h  hccl_device.cpp  hccl_device.h  hccl_wrapper.cpp  hccl_wrapper.h  hcl.version  hcl_api_entry.h  hcl_bits.cpp  hcl_bits.h  hcl_collective_params.h  hcl_config.cpp  hcl_config.h  hcl_consts.h  hcl_defs.h  hcl_device_config_factory.h  hcl_device_control_factory.cpp  hcl_device_control_factory.h  hcl_dynamic_comms_manager.cpp  hcl_dynamic_comms_manager.h  hcl_dynamic_communicator.cpp  hcl_dynamic_communicator.h  hcl_global_conf.cpp  hcl_global_conf.h  hcl_math_utils.h  hcl_nic.cpp  hcl_nic.h  hcl_types.cpp  hcl_types.h  hcl_utils.cpp  hcl_utils.h
hcl/src/collective_interface/: graph_collectives.cpp  graph_collectives.h  hccl_graph.cpp  hccl_graph.h  hccl_prim_collectives.cpp
hcl/src/collective_interface/collectives/: all_gather.cpp  all_gather.h  all_reduce.cpp  all_reduce.h
hcl/src/collective_interface/prims/: hccl_prim.cpp  hccl_prim.h  scaleup_prims.cpp  scaleup_prims.h  simple_prims.cpp  simple_prims.h
hcl/src/coordinator/: coordinator_defs.cpp  coordinator_defs.h  hlcp_client.cpp  hlcp_client.h  hlcp_commands.cpp  hlcp_commands.h  hlcp_server.cpp  hlcp_server.h  qp_migration.h
hcl/src/hccl/: collective_logger.cpp  collective_logger.h  deferred_launcher_job.cpp  deferred_launcher_job.h  hccl.cpp  hccl_collectives.cpp  hccl_communicator.cpp  hccl_communicator.h  hccl_context.cpp  hccl_context.h  hccl_coordinator.cpp  hccl_coordinator.h  hccl_coordinator_client.cpp  hccl_coordinator_client.h  hccl_gen2_impl.h  hccl_helpers.cpp  hccl_helpers.h  hccl_internal_defs.h  hccl_point_to_point.cpp  hcl_tcp_utils.cpp  hcl_tcp_utils.h  network_utils.cpp  network_utils.h  ofi_communicator.cpp  ofi_communicator.h  ofi_plugin.cpp  ofi_plugin.h  socket_thread.cpp  socket_thread.h
hcl/src/hlcp/: acceptor.cpp  acceptor.h  asio.cpp  asio.h  coordinator.cpp  coordinator.h  hlcp.cpp  hlcp.h  hlcp_inc.h  protocol.cpp  protocol.h  socket.cpp  socket.h
hcl/src/ibverbs/: hcl_ibv_eq.cpp  hcl_ibv_loader.cpp  hcl_ibv_loader.h  hcl_ibverbs.cpp  hcl_ibverbs.h  helpers.cpp  helpers.h
hcl/src/infra/: buffer_handle_generator.cpp  buffer_handle_generator.h  concurrent_queue.hpp  concurrent_unordered_map.hpp  delayed_exec.cpp  delayed_exec.h  fd.h  futex.cpp  futex.h  get_class_name.hpp  get_class_name_test.cpp  hcl_affinity_manager.cpp  hcl_affinity_manager.h  hcl_debug_fs.cpp  hcl_debug_stats.cpp  hcl_debug_stats.h  hcl_log_manager.cpp  hcl_log_manager.h  hcl_mpsc_fifo.h  hcl_sockaddr.cpp  hcl_sockaddr.h  hcl_spsc_fifo.h  hcl_topology.cpp  hcl_topology.h  so.cpp  so.h  wts_queue.h
hcl/src/interfaces/: hccl_syn_stream.cpp  hccl_syn_stream.h  hcl_hal.cpp  hcl_hal.h  hcl_icollective_routines.h  hcl_idevice.cpp  hcl_idevice.h  hcl_remote_device.h  hcl_unique_sorted_vector.cpp  hcl_unique_sorted_vector.h
hcl/src/libfabric/: hl_ofi.cpp  hl_ofi.h  hl_ofi_component.cpp  hl_ofi_component.h  hl_ofi_msg_component.cpp  hl_ofi_msg_component.h  hl_ofi_param.h  hl_ofi_rdm_component.cpp  hl_ofi_rdm_component.h  hl_topo.cpp  hl_topo.h  libfabric_common.h  memory_region.cpp  memory_region.h  mr_mapping.cpp  mr_mapping.h
hcl/src/platform/gaudi2/: communicator_descriptor.cpp  communicator_descriptor.h  connectivity_autogen_HLS2.cpp  connectivity_autogen_HLS2.h  connectivity_autogen_HLS2PCIE.cpp  connectivity_autogen_HLS2PCIE.h  context_manager.cpp  context_manager.h  context_manager_priv.h  device_simb_pool_manager.cpp  device_simb_pool_manager.h  eq_handler.cpp  eq_handler.h  g2_sched_pkts.h  gaudi2_nic.cpp  gaudi2_nic.h  hal.cpp  hal.h  hccl_device.cpp  hccl_device.h  hcl_address_generator.h  hcl_collective_routines.cpp  hcl_collective_routines.h  hcl_count_descriptor.h  hcl_device.cpp  hcl_device.h  hcl_device_controller.cpp  hcl_device_controller.h  hcl_graph_sync.cpp  hcl_graph_sync.h  hcl_mem_handler.cpp  hcl_mem_handler.h  hcl_packets.cpp  hcl_packets.h  hls2_runtime_connectivity.cpp  hls2_runtime_connectivity.h  hls2_server_connectivity.cpp  hls2_server_connectivity.h  hls2_server_def.cpp  hls2_server_def.h  (+28 more)
hcl/src/platform/gaudi3/: connectivity_autogen_HLS3.cpp  connectivity_autogen_HLS3.h  connectivity_autogen_HLS3PCIE.cpp  connectivity_autogen_HLS3PCIE.h  connectivity_autogen_HLS3Rack.cpp  connectivity_autogen_HLS3Rack.h  device_simb_pool_manager.cpp  device_simb_pool_manager.h  eq_handler.cpp  eq_handler.h  g3_sched_pkts.h  gaudi3_base_runtime_connectivity.cpp  gaudi3_base_runtime_connectivity.h  gaudi3_base_server_connectivity.cpp  gaudi3_base_server_connectivity.h  gaudi3_nic.cpp  gaudi3_nic.h  hal.cpp  hal.h  hal_hls3pcie.cpp  hal_hls3pcie.h  hccl_device.cpp  hccl_device.h  hcl_address_generator.cpp  hcl_address_generator.h  hcl_collective_routines.cpp  hcl_collective_routines.h  hcl_device.cpp  hcl_device.h  hcl_device_controller.cpp  hcl_device_controller.h  hcl_graph_sync.cpp  hcl_graph_sync.h  hcl_mem_handler.cpp  hcl_mem_handler.h  hcl_packets.cpp  hcl_packets.h  hls3_runtime_connectivity.cpp  hls3_runtime_connectivity.h  hls3_server_connectivity.cpp  (+42 more)
hcl/src/platform/gaudi_common/: gaudi_consts.h  hcl_device_config.cpp  hcl_device_config.h  hcl_device_config_factory.cpp  hcl_device_control_factory.cpp  hcl_device_controller.cpp  hcl_device_controller.h  intermediate_buffer_container.cpp  intermediate_buffer_container.h  simb_pool_container_allocator.cpp  simb_pool_container_allocator.h
hcl/src/platform/gen2_arch_common/: active_stream_manager.cpp  active_stream_manager.h  api_aggregator.cpp  api_aggregator.h  buffer_allocation_manager.cpp  buffer_allocation_manager.h  buffer_manager_base.cpp  buffer_manager_base.h  collective_states.cpp  collective_states.h  collective_utils.h  credit_manager.cpp  credit_manager.h  dependency_checker.cpp  dependency_checker.h  descriptors.cpp  descriptors.h  device_buffer_manager.cpp  device_buffer_manager.h  device_simb_pool_manager.cpp  device_simb_pool_manager.h  eq_handler.cpp  eq_handler.h  eth_stats.cpp  eth_stats.hpp  explicit_addr_container.cpp  explicit_addr_container.h  (+77 more)
(+150 files in other folders)
